<resources>
    <string name="app_name">StationController</string>
    <string name="name">Name</string>
    <string name="phone_1">Phone 1</string>
    <string name="phone_2">Phone 2</string>
    <string name="sms_1">Sms 1</string>
    <string name="sms_2">Sms 2</string>
    <string name="sms_3">Sms 3</string>
    <string name="add_station">Add a station</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="r1_off">R1 Off</string>
    <string name="r1_on">R1 On</string>
    <string name="r2_off">R2 Off</string>
    <string name="r2_on">R2 On</string>
    <string name="no_voltage">V = N/A</string>
    <string name="choose_phone">Please choose phone number</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
</resources>