<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tel1_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_1"
            android:inputType="phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_image_view"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

        <EditText
            android:id="@+id/tel2_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_2"
            android:inputType="phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_image_view"
            app:layout_constraintTop_toBottomOf="@id/tel1_edit_text" />

        <EditText
            android:id="@+id/sms1_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sms_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_image_view"
            app:layout_constraintTop_toBottomOf="@id/tel2_edit_text" />

        <EditText
            android:id="@+id/sms2_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sms_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_image_view"
            app:layout_constraintTop_toBottomOf="@id/sms1_edit_text" />

        <EditText
            android:id="@+id/sms3_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sms_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_image_view"
            app:layout_constraintTop_toBottomOf="@id/sms2_edit_text" />

        <ImageView
            android:id="@+id/delete_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/cancel_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_image_view"
            android:src="@drawable/ic_cancel"/>

        <ImageView
            android:id="@+id/done_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel_image_view" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>